# azampay-sdk-anga

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
azampay/: __init__.py  config.py  core.py  exceptions.py
example_usage/: main.py  requirements.txt
tests/: test_client.py
